# hauto.plugins.hap

./: .gitignore
.github/workflows/: docker-image.yml
database/: functions.sql  tables.sql
service/: Dockerfile  main.py  pmsa.state  pyproject.toml
service/accessories/: air_conditioner.py  light_bulb.py  television.py
service/actions/: __init__.py
service/config/: __init__.py
service/state/: __init__.py
